# microsocks

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  bind2device.c  bind2device.h  clean.sh  configure.ac  microsocks.1  microsocks.spec  s_hashmap.c  sblist.c  sblist.h  sblist_delete.c  server.c  server.h  socks5.sln  sockssrv.c  sockssrv.h
.github/workflows/: ccpp.yml  release.yml
algo/: bucket.c
snap/: snapcraft.yaml
socks5/: sblist.h  server.c  server.h  socks5.vcxproj  socks5.vcxproj.filters  sockssrv.c
src/: Makefile.am  sockssrv.c
systemd/: Makefile.am  microsocks  microsocks.service.in
